# CHAT

./: .clang-format  CMakeLists.txt  ClickedLabel.cpp  ClickedLabel.h  ConfigMgr.cpp  ConfigMgr.h  HttpMgr.cpp  HttpMgr.h  LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  RegisterDialog.cpp  RegisterDialog.h  RegisterDialog.ui  ResetDialog.cpp  ResetDialog.h  ResetDialog.ui  Singleton.h  TcpMgr.cpp  TcpMgr.h  TimerBtn.cpp  TimerBtn.h  UserMgr.cpp  UserMgr.h  config.json  global.cpp  global.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  standard.md
.qt/: QtDeploySupport.cmake  deploy_CHAT_eb0d843227
res/style/: style.qss
